--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,5 +1,6 @@
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g mode-keys vi
 set -g status-keys vi
 set -g mouse on
