update tmux conf

--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -4,6 +4,27 @@ set-option -ga terminal-overrides ",xterm-256color:Tc"
 set -g mode-keys vi
 set -g status-keys vi
 set -g mouse on
-
 set -g status on
 
+# vim-like pane resizing  
+bind -r C-k resize-pane -U
+bind -r C-j resize-pane -D
+bind -r C-h resize-pane -L
+bind -r C-l resize-pane -R
+
+# vim-like pane switching
+bind -r k select-pane -U 
+bind -r j select-pane -D 
+bind -r h select-pane -L 
+bind -r l select-pane -R 
+
+# and now unbind keys
+unbind Up     
+unbind Down   
+unbind Left   
+unbind Right  
+
+unbind C-Up   
+unbind C-Down 
+unbind C-Left 
+unbind C-Right
