--- a/dotfiles/.tmux.conf
+++ b/dotfiles/.tmux.conf
@@ -1,6 +1,7 @@
-set -g default-terminal "tmux-256color"
-set -ga terminal-overrides ",*256col*:Tc"
-set-option -ga terminal-overrides ",xterm-256color:Tc"
+#set -g default-terminal "tmux-256color"
+#set -ga terminal-overrides ",*256col*:Tc"
+#set-option -ga terminal-overrides ",xterm-256color:Tc"
+set -g default-terminal "xterm-256color"
 set -g mode-keys vi
 set -g status-keys vi
 set -g mouse on
